:truck:: add documentation
